pkg/lang/testdata/ub/constraints/valid/check-constraints-nested-fields.ub
constraints: [
  { kind: exactly-one-of, fields: [input.code.inline, input.code.from-file] },
]
