pkg/lang/testdata/ub/constraints/invalid/duplicate-key.ub
constraints: [
  { kind: required-together, fields: [input.a], fields: [input.b] },
]
